2001-04-20  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: Don't build GIMP plugin by default

2001-04-20  Jeff Freedman  <jeff@amy.nerble.net>

	* World-wrapping is kind-of working a little (on occasion).

2001-04-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/savegump.shp: touched up a bit

2001-04-18  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: fix GIMP checks to support recent GTK+'s

2001-04-17  Jeff Freedman  <jeff@amy.nerble.net>

	* First pass at world-wrapping.  (Doesn't work yet!)

2001-04-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.cygwin: Travis' changes
	* gamewin.cc: fixed memleak in mini-screenshot

2001-04-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/Gump.cc: fixed "ok to load?"/"ok to save?" dialog boxes.
	* data/savegump.shp: added borders for larger resolutions

2001-04-17  Dancer Vesperman <dancer@users.sourceforge.net>
	* keyactions.cc: Honour std namespace

2001-04-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* schedule.*, actors.cc: added Bake_schedule

2001-04-16  Max Horn  <max@quendi.de>
	* README.MacOS, mac/mac_autoconfig.h: updated for Alpha 3
	* Paperdoll_gump.cc, intrinsics.cc, Flex.cc
	* gamewin.h: second version of scroll_if_needed() fixed as to
	  always return a sensible value
	* expack.cc: enlarged ugly hack for MacOS to also build flx.in
	  in the BG subdir (yeah I know it is evil!)

2001-04-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.*, keyactions.*: added a 'test' action, for testing anything you like
	* schedule.*, actors.cc: added Forge_schedule
	* actions.*:	animate action: complete full cycle
			frames action: allow setting frames of other objects
			animate action: allow setting length of cycle
	
2001-04-16  Dancer Vesperman <dancer@users.sourceforge.net>
	* Upgrade for g++ 3.0
		- Repair a throw specification in exceptions.h
		- Missing std:: qualifier to ostream in files/Flex.h