@@ -34,6 +34,7 @@ sav_down.shp
 sav_up.shp
 sav_upup.shp
 sav_slider.shp
+sav_selected.shp
 gamemenu.shp
 gam_loadsave.shp
 gam_video.shp
